<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  
    android:background="@drawable/home_conference_bg"
    tools:context="com.example.nipc26.librarymanagement.activities.CreateAccountActivity">
    <include
        android:id="@+id/toolbarHeader"
        layout="@layout/toolbar_layout" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarHeader"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivLogo"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="48dp"
                android:padding="5dp"
                android:gravity="center"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/etFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Full Name"
                    android:inputType="textPersonName"
                    android:drawableLeft="@drawable/user"
                    android:drawablePadding="10dp"
                    android:paddingLeft="70dp"
                    
                    android:background="@android:color/holo_blue_dark"/>
                <EditText
                    android:id="@+id/etMobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="Mobile Number"
                    android:inputType="phone"
                    android:drawableLeft="@drawable/phone"
                    android:drawablePadding="10dp"
                    android:paddingLeft="70dp"
                    
                    android:background="@android:color/holo_blue_dark"/>

                <EditText
                    android:id="@+id/etEmailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="Email Address"
                    android:inputType="textEmailAddress"
                    android:drawableLeft="@drawable/mail2"
                    android:drawablePadding="10dp"
                    android:paddingLeft="70dp"
                    
                    android:background="@android:color/holo_blue_dark"/>
                <EditText
                    android:id="@+id/etUnivId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="University Id"
                    android:inputType="textPersonName"
                    android:drawableLeft="@drawable/id_card_three"
                    android:drawablePadding="10dp"
                    android:paddingLeft="70dp"
                    
                    android:background="@android:color/holo_blue_dark"/>
                <TextView
                    android:id="@+id/tvBatchYear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/mm_dd_yyyy_batch_year"
                    android:textSize="20dp"
                    android:background="@android:color/holo_blue_dark"
                    android:layout_marginTop="15dp"
                    android:drawableLeft="@drawable/calendar"
                    android:drawablePadding="10dp"
                    android:paddingLeft="70dp"
                    
                    />
                <TextView
                    android:id="@+id/tvDOBYear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/mm_dd_yyyy_dob"
                    android:textSize="20dp"
                    android:background="@android:color/holo_blue_dark"
                    android:layout_marginTop="15dp"
                    android:drawableLeft="@drawable/calendar"
                    android:drawablePadding="10dp"
                    android:paddingLeft="70dp"
                    />




                <EditText
                    android:id="@+id/etLoginUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="Username"
                    android:drawableLeft="@drawable/user"
                    android:drawablePadding="10dp"
                    android:paddingLeft="70dp"
                    
                    android:background="@android:color/holo_blue_dark"/>

                <EditText
                    android:id="@+id/etLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etLoginUsername"
                    android:hint="Password"
                    android:layout_marginTop="15dp"
                    android:drawableLeft="@drawable/keytwo"
                    android:inputType="textPassword"
                    android:drawablePadding="10dp"
                    android:paddingLeft="70dp"
                    android:background="@android:color/holo_blue_dark"/>

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="15dp"
                    android:drawableLeft="@drawable/user"
                    android:drawablePadding="10dp"
                    android:paddingLeft="90dp"
                    android:background="@android:color/holo_blue_dark"/>


                <Button
                    android:id="@+id/btnCreateAccount"
                    android:layout_marginTop="20dp"
                    android:text="Create Account"
                    android:textSize="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!--<Button
                    android:id="@+id/btnDevMode"
                    android:layout_below="@+id/etLoginPassword"
                    android:layout_marginTop="8dp"
                    style="@style/ButtonLogin"
                    android:text="Dev Mode: On"
                    android:textSize="12dp"/>-->
            </LinearLayout>
            </RelativeLayout>
    </ScrollView>

</RelativeLayout>
