<resources>
    <string name="app_name"><b>Library Management</b></string>
    <string name="mm_dd_yyyy_dob">mm/dd/yyyy(dob)</string>
    <string name="mm_dd_yyyy_batch_year">yyyy(batch year)</string>
    <string name="under_dev">Under Development</string>
    <string-array name="user_type_array">
        <item>User Type</item>
        <item>Admin</item>
        <item>Student</item>
    </string-array>
</resources>
